handle post by owner id
