# server/src/routes/posts_route.ts
@@ -39,6 +39,12 @@ import { authMiddleware } from "../controllers/auth_controller";
  *     description: Retrieves a list of all posts
  *     tags:
  *       - Posts
+ *     parameters:
+ *       - in: query
+ *         name: owner
+ *         type: string
+ *         required: false
+ *         example: Local
  *     responses:
  *       '200':
  *         description: A list of posts
